--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cb-pro-api": "^0.0.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "react-use-websocket": "^4.2.0",
     "recharts": "^2.1.14",
